# esp32-touch-switch

./: sdkconfig  sdkconfig.old
main/: CMakeLists.txt  lvgl_port.h  main.c
main/ui/: CMakeLists.txt  filelist.txt  project.info  ui.c  ui.h  ui_events.c  ui_events.h  ui_helpers.c  ui_helpers.h
main/ui/components/: ui_comp.c  ui_comp.h  ui_comp_hook.c  ui_comp_hook.h  ui_comp_imgbutton1.c  ui_comp_imgbutton1.h
main/ui/images/: ui_img_1144295435.c  ui_img_1723991977.c  ui_img_1732143338.c  ui_img_345358842.c  ui_img_345601881.c  ui_img_689030760.c  ui_img_am_png.c  ui_img_bright_off_png.c  ui_img_bright_on_png.c  ui_img_circuit1_off_png.c  ui_img_circuit1_on_png.c  ui_img_colon_png.c  ui_img_electric_off_png.c  ui_img_electric_on_png.c  ui_img_heat_off_png.c  ui_img_heat_on_png.c  ui_img_light_off_png.c  ui_img_light_on_png.c  ui_img_numb_0_png.c  ui_img_numb_1_png.c  ui_img_numb_2_png.c  ui_img_numb_3_png.c  ui_img_numb_4_png.c  ui_img_numb_5_png.c  ui_img_numb_6_png.c  ui_img_numb_7_png.c  ui_img_numb_8_png.c  ui_img_numb_9_png.c  ui_img_pm_png.c  ui_img_setting_off_png.c  ui_img_setting_on_png.c
main/ui/screens/: ui_Screen1.c  ui_Screen1.h
ui-design/: Paran_Smart_Switch.sll  Paran_Smart_Switch.slp  Paran_Smart_Switch.spj  Paran_Smart_Switch_events.py  project.info
ui-design-480*800/: Paran_Smart_Switch_vertical.sll  Paran_Smart_Switch_vertical.spj  Paran_Smart_Switch_vertical_events.py  project.info
ui-design-480*800/components/: ImgButton1.ecomp
